<?xml version="1.0"?>
<package>
  <name>learning_actionlib</name>
  <version>0.0.0</version>
  <description>package</description>

  <maintainer email="esteve AT osrfoundation DOT org">Esteve Fernandez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>

</package>
